data/collection/fixes/descriptions/java/JDK-8007518
jtreg test
  tools/javac/lambda/TargetType36.java
contains @ignore.  When it is run via -ignore:run, it fails like this:
----------direct:(7/441)*----------
D:\\tools\\tl8\\langtools\\test\\tools\\javac\\lambda\\TargetType36.java:41: error: lambda expression not expected here
        SAM s3 = (SAM)(true? (a,b)->a+b : (a,b)->a+b);
                             ^
D:\\tools\\tl8\\langtools\\test\\tools\\javac\\lambda\\TargetType36.java:41: error: lambda expression not expected here
        SAM s3 = (SAM)(true? (a,b)->a+b : (a,b)->a+b);
                                          ^
2 errors
result: Failed. Compilation failed: Compilation failed